# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  12 Mar 2004; Marius Mauch <genone@gentoo.org> bin/repoman:
  repoman: Added a readonly-variable-assignment check (#44424)

  06 Mar 2004; Masatomo Nakano <nakano@gentoo.org> repoman, portage.py:
  Fixed some repoman/portage bugs. repoman shouldn't use /etc/portage/*
  files. repoman shouldn't use PORTDIR_OVERLAY(#11335). repoman should use
  each arch profile dir(#43601). portage didn't handle virtual dependency
  with version (>=virtual/package-1.0) in some places.

  05 Mar 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
  Trivial fix for emerge -pv if the download size is a long.

  03 Mar 2004; Marius Mauch <genone@gentoo.org> bin/repoman,
  pym/portage.py:
  Fixing the "letter before endversion" bug (#17172). Replacing
  keywords.desc with arch.list in repoman (#35398). FEATURES=strict
  is now sufficient for Manifest validation (#41292).

  01 Mar 2004; Marius Mauch <genone@gentoo.org> bin/emerge,
  bin/emergehelp.py, man/emerge.1:
  Updated docs for --update and removed the "help" action (wasn't working
  anyway).

  29 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed 
  wrong USE in 'emerge info'. This should fix #34260.
	
  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Fixed info dir
  regeneration produces errors with a non-C locale and misleading error 
  message. This should fix #41872,#24299.

  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge, emergehelp.py,
  emerge.1: Added genone's patch for man/help of --tree option.

  27 Feb 2004; Masatomo Nakano <nakano@gentoo.org> ebuild.sh: Removed 
  /usr/share directory in ${D} when it's empty. This should close #42312.

  26 Feb 2004; Masatomo Nakano <nakano@gentoo.org> emerge: Added new option
  --newuse. This option is to rebuild a package whose USE has been changed.
